Login, lugares hechos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="#goto2" >Lugares</a>
     <a href="#" >Contacto</a>
     <a href="#" >Sign Up</a>
-    <a href="#" >Login</a>
+    <a href="./login/index.html" >Login</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction();">
       <i class="fa fa-bars"></i>
     </a>
