--- a/registro/index.html
+++ b/registro/index.html
@@ -20,8 +20,16 @@
     <a href="../index.html" >Inicio</a>
 </div> 
 <div class="contenedor">
-  <h1 >Otra vez aquí!</h1>
+  <h1 >Bienvenido a GeoExplore!</h1>
   <form action="">
+    <div class="form-group was-validated">
+      <label class="form-label" for="text">Nombre</label>
+      <input class="form-control" type="text" name="text" id="text" required>
+    </div>
+    <div class="form-group was-validated">
+      <label class="form-label" for="number">Edad</label>
+      <input class="form-control" type="number" name="number" id="number" required>
+    </div>
     <div class="form-group was-validated">
       <label class="form-label" for="email">Email</label>
       <input class="form-control" type="email" name="email" id="email" required>
@@ -38,11 +46,11 @@
     </div>
     <div class="form-group form-check">
       <input  class="form-check-input" type="checkbox" name="pass" id="check">
-      <label  class= "form-check-label" for="checkbox">Remember me</label>
-      <a href="../registro/index.html">No tienes cuenta?</a>
+      <label  class= "form-check-label" for="checkbox" required>Aceptas los derechos de la página</label>
+
     </div>
 
-    <input class="btn btn-success w-100"type="submit" value="Sign In">
+    <input class="btn btn-success w-100"type="submit" value="Sign Up">
 
 
 
