Icono de pestana, contacto aniadido

--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoExplore</title>
+    <link rel="shortcut icon" href="./font/montana.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/responsive.css">
-  
-    
+
     
 </head>
 <body>
+
   <div class="topnav" id="myTopnav">
     <a href="#goto2" >Lugares</a>
-    <a href="#" >Contacto</a>
-    <a href="./registro/" >Sign Up</a>
+    <a href="./Contacto/index.html" >Contacto</a>
+    <a href="./registro/index.html" >Sign Up</a>
     <a href="./login/index.html" >Login</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction();">
       <i class="fa fa-bars"></i>
@@ -87,12 +89,7 @@
    <footer>
       <a href="./AvisosLegales/index.html">Avisos Legales</a>
    </footer>
-   <a class="ir-arriba"  javascript:void(0) title="Volver arriba">
-    <span class="fa-stack">
-      <i class="fa fa-circle fa-stack-2x"></i>
-      <i class="fa fa-arrow-up fa-stack-1x fa-inverse"></i>
-    </span>
-  </a>
+   
     <script src="./js/scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -100,3 +97,27 @@
 
 </body>
 </html>
+
+
+<!--
+
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>jQuery: Botón para arriba con desplazamiento suave</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+</head>
+<body>
+
+<h1>Hola, haz click en el botón “ir hacia arriba” y sube</h1>
+<div class="container">
+
+<a href="#irHaciaArriba" class="backTop-btn"><i class="fa fa-arrow-up" aria-hidden="true"></i><br>Ir hacia arriba</a>
+<script src="./script.js"></script>
+</body>
+</html>
+-->
