--- a/Contacto/index.html
+++ b/Contacto/index.html
@@ -21,8 +21,9 @@
     <a href="../index.html" >Inicio</a>
 </div> 
 <div class="contenedor">
-  <h1 >Otra vez aquí!</h1>
+  <h1 >Contacta con nosotros!</h1>
   <form action="">
+      
     <div class="form-group was-validated">
       <label class="form-label" for="email">Email</label>
       <input class="form-control" type="email" name="email" id="email" required>
@@ -31,19 +32,15 @@
       </div>
     </div>
     <div class="form-group was-validated">
-      <label class="form-label" for="password">Contraseña</label>
-      <input class="form-control" type="password" name="pass" id="pass" required>
-      <div class="invalid-feedback">
-        Porfavor, ponga la contraseña
+      <label class="form-label" for="text">Título de problema </label>
+      <input class="form-control" type="text" name="text" id="text" required>
     </div>
-    </div>
-    <div class="form-group form-check">
-      <input  class="form-check-input" type="checkbox" name="pass" id="check">
-      <label  class= "form-check-label" for="checkbox">Remember me</label>
-      <a href="../registro/index.html">No tienes cuenta?</a>
+    <div class="form-group was-validated">
+      <label class="form-label" for="text">Razón </label>
+      <input class="form-control" type="text" name="text" id="text2" required>
     </div>
 
-    <input class="btn btn-success w-100"type="submit" value="Sign In">
+    <input class="btn btn-success w-100"type="submit" value="Enviar">
 
 
 
